avoid breaking up layout when one of the entry is too long. relates #52

--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,12 @@ table.credential-table td.password {
     min-width: 8em;
 }
 
+table.credential-table td {
+    max-width: 350px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
+
 .password {
     position: relative;
 }
